k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medichubs-backend
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medichubs-backend
  template:
    metadata:
      labels:
        app: medichubs-backend
    spec:
      containers:
        - name: backend
          image: tofubean123/medichubs-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
