k8s/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: medichubs-gateway
  namespace: dev
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: medichubs-tls
      hosts:
        - "*"
