k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: medichubs-vs
  namespace: dev
spec:
  hosts:
    - "*"
  gateways:
    - medichubs-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: medichubs-backend-svc
            port:
              number: 80
